# proboscis-linter

./: .coverage  .gitignore  .testmondata  IMPLEMENTATION_SUMMARY.md  README.md  architecture.md  benchmark.py  benchmark_small.py  benchmark_summary.md  debug_files.py  demo_example.py  proboscis_stop_hook.py  pyproject.toml
.claude/: settings.json
docs/: adding_rules.md  configuration.md  performance_optimizations.md
docs/rules/: PL001-require-unit-test.md  PL001_require_test.md  PL002-require-integration-test.md  PL003-require-e2e-test.md  PL004-require-test-markers.md
rust/: Cargo.toml
rust/src/: file_discovery.rs  git.rs  lib.rs  models.rs  noqa.rs  public_api.rs  test_cache.rs  test_discovery.rs
rust/src/rules/: mod.rs  pl001_require_test.rs  pl002_require_integration_test.rs  pl003_require_e2e_test.rs  pl004_require_test_markers.rs
src/proboscis_linter/: __init__.py  __main__.py  auto_fix.py  cli.py  config.py  linter.py  models.py  report_generator.py  rust_linter.py  sample.py
test/e2e/: test_benchmark.py  test_e2e_benchmark.py  test_e2e_benchmark_small.py  test_e2e_debug_files.py  test_e2e_demo_example.py  test_e2e_proboscis_stop_hook.py  test_proboscis_stop_hook.py
test/e2e/proboscis_linter/: test_cli.py  test_config.py  (+10 more)
test/integration/: test_benchmark.py  test_debug_files.py  test_demo_example.py  test_integration_auto_fix.py  test_integration_benchmark.py  test_integration_benchmark_small.py  test_integration_debug_files.py  test_integration_demo_example.py  test_integration_proboscis_stop_hook.py
test/unit/: test_debug_files.py  test_unit_benchmark.py  test_unit_benchmark_small.py  test_unit_debug_files.py  test_unit_demo_example.py  test_unit_proboscis_stop_hook.py
tests/: test_demo.py  test_sample.py
tests/integration/: test_noqa_integration.py
tests/unit/: test_cli.py  test_config.py  test_git_changes.py  test_linter.py  test_noqa.py  test_package_structure.py  test_report_generator.py
(+45 files in other folders)
