[package]
name = "proboscis-linter-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "proboscis_linter_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
regex = "1.11"
walkdir = "2.5"

[profile.release]
lto = true
opt-level = 3
